Fix wrong positioning of snackbars
Before this change, there's a lot space between snackbars.

This change is made to counterbalance a change in the teleport
positioning computation (ie. with the use of --v-layout-[bottom|top] for
the padding computation). We actually don't want Vuetify to computed the
positioning since we're using flex display on the parents to stack the
snackbars.

--- a/powa/static/styles/main.scss
+++ b/powa/static/styles/main.scss
@@ -98,6 +98,8 @@ td {
   left: initial;
   bottom: 0;
   right: 0;
+  padding-bottom: 0;
+  padding-top: 0;
   position: relative;
 
   .v-overlay__content {
